# alexiu

./: README.md  package-lock.json  pyproject.toml  start.ps1  test_chatbot.html
assets/: UI_CREATION_STEPS.md
configs/: model_configs.yaml  prompt_configs.yaml
configs/schemas/: analysis_schema.json  news_analysis_schema.json  news_schema.json  query_router_schema.json  report_schema.json
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/styles/: globals.css  (+1 more)
prompts/chatbot/: general_chatbot_agent_system_prompt.txt  query_rewriter_agent_system_prompt.txt  query_rewriter_agent_user_prompt.txt  query_router_agent_system_prompt.txt  query_router_agent_user_prompt.txt  report_answer_agent_system_prompt.txt
prompts/report_generator/: analysis_agent_system_prompt.txt  analysis_agent_user_prompt.txt  generator_agent_system_prompt.txt  generator_agent_user_prompt.txt  news_agent_user_prompt.txt  news_analysis_agent_system_prompt.txt  news_analysis_agent_user_prompt.txt
src/: global_configs.py
src/api/: main.py
src/clients/: openai_client.py
src/json_generator/: build_player_json.py
src/models/: compare_jsonl_growth.py  compute_growth_potential.py  dual.ipynb  genaiflow.drawio  glm.ipynb  xgboost.ipynb
src/utils/: __init__.py  load_utils.py  message_builder.py  response_utils.py  session_manager.py
tests/: test_chatbot_orchestrator.py  test_general_chatbot.py  test_query_rewriter.py  test_query_router.py  test_real_example_generator.py  test_real_example_report_orchestrator.py  test_report_answer_agent.py
(+43 files in other folders)
